cmake_minimum_required(VERSION 3.2)

project(ip_filter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})

file(GLOB_RECURSE IPFILTER_H
        "${PROJECT_SOURCE_DIR}//*.h"
        )

file(GLOB IPFILTER_SRC
        "${PROJECT_SOURCE_DIR}/*.cpp"
        )
		
add_executable(ip_filter ${IPFILTER_SRC} ${IPFILTER_H} )

set(CMAKE_CXX_STANDARD 17)

set_target_properties(ip_filter PROPERTIES
  CXX_STANDARD_REQUIRED ON
  CXX_STANDARD 17
  COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
)

install(TARGETS ip_filter RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)

set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_CONTACT sosninroman92@gmail.com)

include (CPack)
